Implemented the simplest admin functionality that worked.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,22 +4,22 @@ en:
       image_picker:
         image: image
   plugins:
-    town_stories:
-      title: Town Stories
+    town_story_articles:
+      title: Town Story Articles
   admin:
-    town_stories:
+    town_story_articles:
       actions:
-        create_new: Add New Town Story
-        reorder: Reorder Town Stories
-        reorder_done: Done Reordering Town Stories
+        create_new: Add New Town Story Article
+        reorder: Reorder Town Story Articles
+        reorder_done: Done Reordering Town Story Articles
       records:
-        title: Town Stories
+        title: Town Story Articles
         sorry_no_results: Sorry! There are no results found.
-        no_items_yet: There are no Town Stories yet. Click "Add New Town Story" to add your first town story.
-      town_story:
+        no_items_yet: There are no Town Story Articles yet. Click "Add New Town Story Article" to add your first town story.
+      town_story_article:
         view_live_html: View this town story live <br/><em>(opens in a new window)</em>
         edit: Edit this town story
         delete: Remove this town story forever
-  town_stories:
+  town_story_articles:
     show:
-      other: Other Town Stories
+      other: Other Town Story Articles
